-- ============================================
-- Biblioteka - Current Database Schema (v2.1.0)
-- Generated: January 9, 2026
-- Database: PostgreSQL 16
-- ============================================
-- This file reflects the current schema state as defined by Doctrine migrations.
-- For full initialization with seed data, see init-db-expanded-v2.sql

CREATE EXTENSION IF NOT EXISTS vector;

-- ============================================
-- SYSTEM SETTINGS & CONFIGURATION
-- ============================================

CREATE TABLE system_setting (
    id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    setting_key VARCHAR(120) NOT NULL,
    setting_value TEXT NOT NULL,
    value_type VARCHAR(16) NOT NULL,
    description VARCHAR(255) DEFAULT NULL,
    created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    updated_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    PRIMARY KEY(id)
);

CREATE TABLE staff_role (
    id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    name VARCHAR(120) NOT NULL,
    role_key VARCHAR(120) NOT NULL,
    modules JSON NOT NULL,
    description VARCHAR(255) DEFAULT NULL,
    created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    updated_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    PRIMARY KEY(id)
);

CREATE UNIQUE INDEX UNIQ_B55FFCE55E237E06 ON staff_role (name);
CREATE UNIQUE INDEX UNIQ_B55FFCE53EF22FDB ON staff_role (role_key);
CREATE UNIQUE INDEX UNIQ_7307C40B5FA1E697 ON system_setting (setting_key);

-- ============================================
-- USER MANAGEMENT
-- ============================================

CREATE TABLE app_user (
    id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    email VARCHAR(180) NOT NULL,
    name VARCHAR(255) NOT NULL,
    roles JSON NOT NULL,
    password VARCHAR(255) NOT NULL,
    phone_number VARCHAR(30) DEFAULT NULL,
    address_line VARCHAR(255) DEFAULT NULL,
    city VARCHAR(120) DEFAULT NULL,
    postal_code VARCHAR(12) DEFAULT NULL,
    pesel VARCHAR(11) DEFAULT NULL,
    card_number VARCHAR(20) DEFAULT NULL,
    blocked BOOLEAN DEFAULT false NOT NULL,
    verified BOOLEAN DEFAULT false NOT NULL,
    verified_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL,
    pending_approval BOOLEAN DEFAULT false NOT NULL,
    membership_group VARCHAR(64) DEFAULT 'standard' NOT NULL,
    age_range_code VARCHAR(24) DEFAULT NULL,
    loan_limit INT DEFAULT 5 NOT NULL,
    blocked_reason VARCHAR(255) DEFAULT NULL,
    created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    updated_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    privacy_consent_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL,
    newsletter_subscribed BOOLEAN DEFAULT true NOT NULL,
    card_expiry TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL,
    account_status VARCHAR(50) DEFAULT NULL,
    keep_history BOOLEAN DEFAULT false NOT NULL,
    email_loans BOOLEAN DEFAULT true NOT NULL,
    email_reservations BOOLEAN DEFAULT true NOT NULL,
    email_fines BOOLEAN DEFAULT true NOT NULL,
    email_announcements BOOLEAN DEFAULT false NOT NULL,
    preferred_contact VARCHAR(20) DEFAULT NULL,
    default_branch VARCHAR(50) DEFAULT NULL,
    theme VARCHAR(20) DEFAULT 'auto',
    preferred_categories JSON DEFAULT NULL,
    onboarding_completed BOOLEAN DEFAULT false NOT NULL,
    font_size VARCHAR(20) DEFAULT 'standard',
    language VARCHAR(5) DEFAULT 'pl',
    pin VARCHAR(4) DEFAULT NULL,
    taste_embedding vector(1536) DEFAULT NULL,
    PRIMARY KEY(id)
);

CREATE UNIQUE INDEX UNIQ_88BDF3E9E7927C74 ON app_user (email);

CREATE SEQUENCE refresh_token_id_seq INCREMENT BY 1 MINVALUE 1 START 1;

CREATE TABLE refresh_token (
    id INT NOT NULL DEFAULT nextval('refresh_token_id_seq'),
    user_id INT NOT NULL,
    token VARCHAR(255) NOT NULL,
    token_hash VARCHAR(64) NOT NULL,
    expires_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    ip_address VARCHAR(45) DEFAULT NULL,
    user_agent VARCHAR(255) DEFAULT NULL,
    is_revoked BOOLEAN NOT NULL DEFAULT FALSE,
    revoked_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL,
    PRIMARY KEY (id),
    CONSTRAINT fk_refresh_token_user FOREIGN KEY (user_id)
        REFERENCES app_user (id) ON DELETE CASCADE NOT DEFERRABLE INITIALLY IMMEDIATE
);

CREATE UNIQUE INDEX uniq_refresh_token ON refresh_token (token);
CREATE UNIQUE INDEX uniq_refresh_token_hash ON refresh_token (token_hash);
CREATE INDEX idx_refresh_token_user ON refresh_token (user_id);

-- ============================================
-- CATALOG: CORE ENTITIES
-- ============================================

CREATE TABLE author (
    id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    name VARCHAR(255) NOT NULL,
    PRIMARY KEY(id)
);

CREATE UNIQUE INDEX UNIQ_BDAFD8C85E237E06 ON author (name);

CREATE TABLE category (
    id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    name VARCHAR(120) NOT NULL,
    PRIMARY KEY(id)
);

CREATE UNIQUE INDEX UNIQ_64C19C15E237E06 ON category (name);

CREATE TABLE age_range (
    code VARCHAR(24) NOT NULL,
    label VARCHAR(80) NOT NULL,
    min_age SMALLINT NOT NULL,
    max_age SMALLINT DEFAULT NULL,
    description TEXT DEFAULT NULL,
    PRIMARY KEY(code)
);

CREATE TABLE book (
    id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    title VARCHAR(255) NOT NULL,
    isbn VARCHAR(20) DEFAULT NULL,
    copies INT NOT NULL,
    total_copies INT NOT NULL,
    storage_copies INT NOT NULL,
    open_stack_copies INT NOT NULL,
    description TEXT DEFAULT NULL,
    embedding vector(1536) DEFAULT NULL,
    search_vector tsvector GENERATED ALWAYS AS (to_tsvector('simple', coalesce(title, '') || ' ' || coalesce(description, ''))) STORED,
    publisher VARCHAR(180) DEFAULT NULL,
    publication_year SMALLINT DEFAULT NULL,
    resource_type VARCHAR(60) DEFAULT NULL,
    signature VARCHAR(60) DEFAULT NULL,
    target_age_group VARCHAR(24) DEFAULT NULL,
    created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    author_id INT NOT NULL,
    PRIMARY KEY(id)
);

CREATE INDEX IDX_CBE5A331F675F31B ON book (author_id);
CREATE INDEX book_search_vector_idx ON book USING GIN (search_vector);

CREATE TABLE book_category (
    book_id INT NOT NULL,
    category_id INT NOT NULL,
    PRIMARY KEY(book_id, category_id)
);

CREATE INDEX IDX_1FB30F9816A2B381 ON book_category (book_id);
CREATE INDEX IDX_1FB30F9812469DE2 ON book_category (category_id);

CREATE TABLE book_copy (
    id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    inventory_code VARCHAR(60) NOT NULL,
    status VARCHAR(20) NOT NULL,
    location VARCHAR(120) DEFAULT NULL,
    access_type VARCHAR(30) NOT NULL,
    condition_state VARCHAR(120) DEFAULT NULL,
    created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    updated_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    book_id INT NOT NULL,
    PRIMARY KEY(id)
);

CREATE UNIQUE INDEX UNIQ_5427F08A3DB3FFB6 ON book_copy (inventory_code);
CREATE INDEX IDX_5427F08A16A2B381 ON book_copy (book_id);

CREATE TABLE book_digital_asset (
    id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    label VARCHAR(255) NOT NULL,
    original_filename VARCHAR(255) NOT NULL,
    mime_type VARCHAR(100) NOT NULL,
    size INT NOT NULL,
    storage_name VARCHAR(255) NOT NULL,
    created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    book_id INT NOT NULL,
    PRIMARY KEY(id)
);

CREATE UNIQUE INDEX UNIQ_817C37D0570EB513 ON book_digital_asset (storage_name);
CREATE INDEX IDX_817C37D016A2B381 ON book_digital_asset (book_id);

-- ============================================
-- RATING & RECOMMENDATION SYSTEM
-- ============================================

CREATE TABLE rating (
    id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    rating SMALLINT NOT NULL,
    review TEXT DEFAULT NULL,
    created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    updated_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL,
    user_id INT NOT NULL,
    book_id INT NOT NULL,
    PRIMARY KEY(id)
);

CREATE INDEX IDX_D8892622A76ED395 ON rating (user_id);
CREATE INDEX IDX_D889262216A2B381 ON rating (book_id);
CREATE UNIQUE INDEX rating_user_book_unique ON rating (user_id, book_id);

CREATE TABLE recommendation_feedback (
    id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    feedback_type VARCHAR(20) NOT NULL,
    created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    user_id INT NOT NULL,
    book_id INT NOT NULL,
    PRIMARY KEY(id)
);

CREATE INDEX IDX_FEED_USER ON recommendation_feedback (user_id);
CREATE INDEX IDX_FEED_BOOK ON recommendation_feedback (book_id);
CREATE UNIQUE INDEX feedback_user_book_unique ON recommendation_feedback (user_id, book_id);

CREATE TABLE user_book_interaction (
    id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    user_id INT NOT NULL,
    book_id INT NOT NULL,
    type VARCHAR(20) NOT NULL,
    rating SMALLINT DEFAULT NULL,
    created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    PRIMARY KEY(id)
);

CREATE INDEX user_book_interaction_user_idx ON user_book_interaction (user_id);

CREATE TABLE book_collection (
    id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    name VARCHAR(255) NOT NULL,
    description TEXT DEFAULT NULL,
    featured BOOLEAN NOT NULL,
    display_order INT NOT NULL,
    created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    updated_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL,
    curated_by_id INT NOT NULL,
    PRIMARY KEY(id)
);

CREATE INDEX IDX_63E02F81436FBB41 ON book_collection (curated_by_id);

CREATE TABLE collection_books (
    book_collection_id INT NOT NULL,
    book_id INT NOT NULL,
    PRIMARY KEY(book_collection_id, book_id)
);

CREATE INDEX IDX_DE392C134A06EF1 ON collection_books (book_collection_id);
CREATE INDEX IDX_DE392C116A2B381 ON collection_books (book_id);

-- ============================================
-- LOANS & RESERVATIONS
-- ============================================

CREATE TABLE loan (
    id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    borrowed_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    due_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    returned_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL,
    extensions_count INT NOT NULL,
    last_extended_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL,
    book_id INT NOT NULL,
    book_copy_id INT DEFAULT NULL,
    user_id INT NOT NULL,
    PRIMARY KEY(id)
);

CREATE INDEX IDX_C5D30D0316A2B381 ON loan (book_id);
CREATE INDEX IDX_C5D30D033B550FE4 ON loan (book_copy_id);
CREATE INDEX IDX_C5D30D03A76ED395 ON loan (user_id);

CREATE TABLE reservation (
    id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    status VARCHAR(20) NOT NULL,
    reserved_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    expires_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    fulfilled_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL,
    prepared_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL,
    cancelled_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL,
    expired_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL,
    book_id INT NOT NULL,
    book_copy_id INT DEFAULT NULL,
    user_id INT NOT NULL,
    PRIMARY KEY(id)
);

CREATE INDEX IDX_42C8495516A2B381 ON reservation (book_id);
CREATE INDEX IDX_42C849553B550FE4 ON reservation (book_copy_id);
CREATE INDEX IDX_42C84955A76ED395 ON reservation (user_id);

CREATE TABLE review (
    id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    book_id INT NOT NULL,
    user_id INT NOT NULL,
    rating SMALLINT NOT NULL,
    comment TEXT DEFAULT NULL,
    created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    updated_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    PRIMARY KEY(id)
);

CREATE INDEX IDX_794381C616A2B381 ON review (book_id);
CREATE INDEX IDX_794381C6A76ED395 ON review (user_id);
CREATE UNIQUE INDEX review_user_book_unique ON review (user_id, book_id);

CREATE TABLE fine (
    id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    amount NUMERIC(8, 2) NOT NULL,
    currency VARCHAR(3) NOT NULL,
    reason VARCHAR(255) NOT NULL,
    created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    paid_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL,
    loan_id INT NOT NULL,
    PRIMARY KEY(id)
);

CREATE INDEX IDX_BEA95492CE73868F ON fine (loan_id);

-- ============================================
-- USER PREFERENCES & INTERACTIONS
-- ============================================

CREATE TABLE favorite (
    id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    user_id INT NOT NULL,
    book_id INT NOT NULL,
    PRIMARY KEY(id)
);

CREATE INDEX IDX_68C58ED9A76ED395 ON favorite (user_id);
CREATE INDEX IDX_68C58ED916A2B381 ON favorite (book_id);
CREATE UNIQUE INDEX favorite_user_book_unique ON favorite (user_id, book_id);

CREATE TABLE registration_token (
    id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    token VARCHAR(96) NOT NULL,
    created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    expires_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    used_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL,
    user_id INT NOT NULL,
    PRIMARY KEY(id)
);

CREATE UNIQUE INDEX UNIQ_D09D01D35F37A13B ON registration_token (token);
CREATE INDEX IDX_D09D01D3A76ED395 ON registration_token (user_id);

-- ============================================
-- ADMINISTRATION & AUDIT
-- ============================================

CREATE TABLE announcement (
    id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    title VARCHAR(255) NOT NULL,
    content TEXT NOT NULL,
    location VARCHAR(255) DEFAULT NULL,
    type VARCHAR(20) NOT NULL,
    status VARCHAR(20) NOT NULL,
    is_pinned BOOLEAN NOT NULL,
    show_on_homepage BOOLEAN NOT NULL,
    created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    updated_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    published_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL,
    expires_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL,
    event_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL,
    target_audience JSON DEFAULT NULL,
    created_by_id INT NOT NULL,
    PRIMARY KEY(id)
);

CREATE INDEX IDX_4DB9D91CB03A8386 ON announcement (created_by_id);

CREATE TABLE audit_logs (
    id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    entity_type VARCHAR(50) NOT NULL,
    entity_id INT DEFAULT NULL,
    action VARCHAR(20) NOT NULL,
    ip_address VARCHAR(45) DEFAULT NULL,
    old_values TEXT DEFAULT NULL,
    new_values TEXT DEFAULT NULL,
    description TEXT DEFAULT NULL,
    created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    user_id INT DEFAULT NULL,
    PRIMARY KEY(id)
);

CREATE INDEX idx_audit_entity ON audit_logs (entity_type, entity_id);
CREATE INDEX idx_audit_action ON audit_logs (action);
CREATE INDEX idx_audit_user ON audit_logs (user_id);
CREATE INDEX idx_audit_created ON audit_logs (created_at);

CREATE TABLE backup_record (
    id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    file_name VARCHAR(190) NOT NULL,
    file_path VARCHAR(255) NOT NULL,
    file_size INT NOT NULL,
    status VARCHAR(32) NOT NULL,
    created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    initiated_by VARCHAR(120) DEFAULT NULL,
    PRIMARY KEY(id)
);

-- ============================================
-- INTEGRATION & NOTIFICATIONS
-- ============================================

CREATE TABLE integration_config (
    id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    name VARCHAR(160) NOT NULL,
    provider VARCHAR(120) NOT NULL,
    enabled BOOLEAN NOT NULL,
    settings JSON NOT NULL,
    last_status VARCHAR(32) NOT NULL,
    last_tested_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL,
    created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    updated_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    PRIMARY KEY(id)
);

CREATE TABLE notification_log (
    id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    type VARCHAR(64) NOT NULL,
    channel VARCHAR(32) NOT NULL,
    fingerprint VARCHAR(96) NOT NULL,
    payload JSON DEFAULT NULL,
    status VARCHAR(32) NOT NULL,
    error_message VARCHAR(255) DEFAULT NULL,
    sent_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    user_id INT NOT NULL,
    PRIMARY KEY(id)
);

CREATE INDEX IDX_ED15DF2A76ED395 ON notification_log (user_id);
CREATE UNIQUE INDEX uq_notification_fingerprint_channel ON notification_log (fingerprint, channel);

-- ============================================
-- ACQUISITIONS
-- ============================================

CREATE TABLE supplier (
    id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    name VARCHAR(180) NOT NULL,
    contact_email VARCHAR(180) DEFAULT NULL,
    contact_phone VARCHAR(60) DEFAULT NULL,
    address_line VARCHAR(255) DEFAULT NULL,
    city VARCHAR(120) DEFAULT NULL,
    country VARCHAR(120) DEFAULT NULL,
    tax_identifier VARCHAR(60) DEFAULT NULL,
    notes TEXT DEFAULT NULL,
    active BOOLEAN DEFAULT true NOT NULL,
    created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    updated_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    PRIMARY KEY(id)
);

CREATE TABLE acquisition_budget (
    id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    name VARCHAR(160) NOT NULL,
    fiscal_year VARCHAR(9) NOT NULL,
    allocated_amount NUMERIC(12, 2) NOT NULL,
    spent_amount NUMERIC(12, 2) NOT NULL,
    currency VARCHAR(3) NOT NULL,
    created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    updated_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    PRIMARY KEY(id)
);

CREATE TABLE acquisition_order (
    id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    reference_number VARCHAR(120) DEFAULT NULL,
    title VARCHAR(255) NOT NULL,
    description TEXT DEFAULT NULL,
    items JSON DEFAULT NULL,
    total_amount NUMERIC(12, 2) NOT NULL,
    currency VARCHAR(3) NOT NULL,
    status VARCHAR(20) NOT NULL,
    created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    updated_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    ordered_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL,
    expected_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL,
    received_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL,
    cancelled_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL,
    supplier_id INT NOT NULL,
    budget_id INT DEFAULT NULL,
    PRIMARY KEY(id)
);

CREATE INDEX IDX_1E96EAF32ADD6D8C ON acquisition_order (supplier_id);
CREATE INDEX IDX_1E96EAF336ABA6B8 ON acquisition_order (budget_id);

CREATE TABLE acquisition_expense (
    id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    amount NUMERIC(12, 2) NOT NULL,
    currency VARCHAR(3) NOT NULL,
    description VARCHAR(255) NOT NULL,
    type VARCHAR(20) NOT NULL,
    posted_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    budget_id INT NOT NULL,
    order_id INT DEFAULT NULL,
    PRIMARY KEY(id)
);

CREATE INDEX IDX_82EA1DED36ABA6B8 ON acquisition_expense (budget_id);
CREATE INDEX IDX_82EA1DED8D9F6D38 ON acquisition_expense (order_id);

CREATE TABLE weeding_record (
    id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    book_id INT NOT NULL,
    book_copy_id INT DEFAULT NULL,
    processed_by_id INT DEFAULT NULL,
    reason VARCHAR(255) NOT NULL,
    action VARCHAR(20) NOT NULL,
    condition_state VARCHAR(120) DEFAULT NULL,
    notes TEXT DEFAULT NULL,
    removed_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL,
    PRIMARY KEY(id)
);

CREATE INDEX IDX_WR_BOOK ON weeding_record (book_id);
CREATE INDEX IDX_WR_COPY ON weeding_record (book_copy_id);
CREATE INDEX IDX_WR_PROCESSED_BY ON weeding_record (processed_by_id);

-- ============================================
-- FOREIGN KEYS
-- ============================================

ALTER TABLE app_user ADD CONSTRAINT FK_APP_USER_AGE_RANGE 
    FOREIGN KEY (age_range_code) REFERENCES age_range (code) 
    NOT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE book ADD CONSTRAINT FK_CBE5A331F675F31B 
    FOREIGN KEY (author_id) REFERENCES author (id) 
    NOT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE book ADD CONSTRAINT FK_BOOK_TARGET_AGE_RANGE 
    FOREIGN KEY (target_age_group) REFERENCES age_range (code) 
    NOT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE book_category ADD CONSTRAINT FK_1FB30F9816A2B381 
    FOREIGN KEY (book_id) REFERENCES book (id) ON DELETE CASCADE 
    NOT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE book_category ADD CONSTRAINT FK_1FB30F9812469DE2 
    FOREIGN KEY (category_id) REFERENCES category (id) ON DELETE CASCADE 
    NOT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE book_copy ADD CONSTRAINT FK_5427F08A16A2B381 
    FOREIGN KEY (book_id) REFERENCES book (id) 
    NOT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE book_digital_asset ADD CONSTRAINT FK_817C37D016A2B381 
    FOREIGN KEY (book_id) REFERENCES book (id) 
    NOT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE rating ADD CONSTRAINT FK_D8892622A76ED395 
    FOREIGN KEY (user_id) REFERENCES app_user (id) 
    NOT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE rating ADD CONSTRAINT FK_D889262216A2B381 
    FOREIGN KEY (book_id) REFERENCES book (id) 
    NOT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE recommendation_feedback ADD CONSTRAINT FK_FEED_USER 
    FOREIGN KEY (user_id) REFERENCES app_user (id) 
    NOT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE recommendation_feedback ADD CONSTRAINT FK_FEED_BOOK 
    FOREIGN KEY (book_id) REFERENCES book (id) 
    NOT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE user_book_interaction ADD CONSTRAINT FK_USER_BOOK_INTERACTION_USER 
    FOREIGN KEY (user_id) REFERENCES app_user (id) ON DELETE CASCADE 
    NOT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE user_book_interaction ADD CONSTRAINT FK_USER_BOOK_INTERACTION_BOOK 
    FOREIGN KEY (book_id) REFERENCES book (id) ON DELETE CASCADE 
    NOT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE book_collection ADD CONSTRAINT FK_63E02F81436FBB41 
    FOREIGN KEY (curated_by_id) REFERENCES app_user (id) 
    NOT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE collection_books ADD CONSTRAINT FK_DE392C134A06EF1 
    FOREIGN KEY (book_collection_id) REFERENCES book_collection (id) ON DELETE CASCADE 
    NOT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE collection_books ADD CONSTRAINT FK_DE392C116A2B381 
    FOREIGN KEY (book_id) REFERENCES book (id) ON DELETE CASCADE 
    NOT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE loan ADD CONSTRAINT FK_C5D30D0316A2B381 
    FOREIGN KEY (book_id) REFERENCES book (id) 
    NOT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE loan ADD CONSTRAINT FK_C5D30D033B550FE4 
    FOREIGN KEY (book_copy_id) REFERENCES book_copy (id) 
    NOT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE loan ADD CONSTRAINT FK_C5D30D03A76ED395 
    FOREIGN KEY (user_id) REFERENCES app_user (id) 
    NOT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE reservation ADD CONSTRAINT FK_42C8495516A2B381 
    FOREIGN KEY (book_id) REFERENCES book (id) 
    NOT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE reservation ADD CONSTRAINT FK_42C849553B550FE4 
    FOREIGN KEY (book_copy_id) REFERENCES book_copy (id) 
    NOT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE reservation ADD CONSTRAINT FK_42C84955A76ED395 
    FOREIGN KEY (user_id) REFERENCES app_user (id) 
    NOT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE review ADD CONSTRAINT FK_794381C616A2B381 
    FOREIGN KEY (book_id) REFERENCES book (id) 
    NOT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE review ADD CONSTRAINT FK_794381C6A76ED395 
    FOREIGN KEY (user_id) REFERENCES app_user (id) 
    NOT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE fine ADD CONSTRAINT FK_BEA95492CE73868F 
    FOREIGN KEY (loan_id) REFERENCES loan (id) 
    NOT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE favorite ADD CONSTRAINT FK_68C58ED9A76ED395 
    FOREIGN KEY (user_id) REFERENCES app_user (id) 
    NOT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE favorite ADD CONSTRAINT FK_68C58ED916A2B381 
    FOREIGN KEY (book_id) REFERENCES book (id) 
    NOT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE registration_token ADD CONSTRAINT FK_D09D01D3A76ED395 
    FOREIGN KEY (user_id) REFERENCES app_user (id) 
    NOT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE announcement ADD CONSTRAINT FK_4DB9D91CB03A8386 
    FOREIGN KEY (created_by_id) REFERENCES app_user (id) 
    NOT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE notification_log ADD CONSTRAINT FK_ED15DF2A76ED395 
    FOREIGN KEY (user_id) REFERENCES app_user (id) 
    NOT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE acquisition_order ADD CONSTRAINT FK_1E96EAF32ADD6D8C 
    FOREIGN KEY (supplier_id) REFERENCES supplier (id) 
    NOT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE acquisition_order ADD CONSTRAINT FK_1E96EAF336ABA6B8 
    FOREIGN KEY (budget_id) REFERENCES acquisition_budget (id) 
    NOT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE acquisition_expense ADD CONSTRAINT FK_82EA1DED36ABA6B8 
    FOREIGN KEY (budget_id) REFERENCES acquisition_budget (id) 
    NOT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE acquisition_expense ADD CONSTRAINT FK_82EA1DED8D9F6D38 
    FOREIGN KEY (order_id) REFERENCES acquisition_order (id) 
    NOT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE weeding_record ADD CONSTRAINT FK_WR_BOOK 
    FOREIGN KEY (book_id) REFERENCES book (id) 
    NOT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE weeding_record ADD CONSTRAINT FK_WR_COPY 
    FOREIGN KEY (book_copy_id) REFERENCES book_copy (id) 
    NOT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE weeding_record ADD CONSTRAINT FK_WR_PROCESSED_BY 
    FOREIGN KEY (processed_by_id) REFERENCES app_user (id) 
    NOT DEFERRABLE INITIALLY IMMEDIATE;
